# fastapi-practice

./: .env  .gitignore  DATABASE_SETUP.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 335450cc0808_projects_model_and_enum_for_type.py  4c029dfa8955_added_user_foreign_key_for_projects.py  a9fb80627de2_create_users_table.py
app/: app.py  db.py  main.py
app/database/: db.py  models.py
app/db/: base.py  models.py
app/routes/: users.py
app/schemas/: schemas.py
